--- a/for you.html
+++ b/for you.html
@@ -59,7 +59,7 @@ cheers for the year that God blessed you with.
 </p>
 
 
-<a href="file:///C:/Users/ernes/OneDrive/Desktop/For%20Lara/letter.html" class="no-rectangle">
+<a href="https://3sforthrees.github.io/3sforThrees/letter.html" class="no-rectangle">
     
 <button class="letter">
     A letter for you
@@ -120,6 +120,7 @@ Poem <br> :)
 
 
    
+
 
 
 </html>
