Update A little something.html

--- a/A little something.html
+++ b/A little something.html
@@ -14,7 +14,7 @@
        <p> just press the button below to see it! I hope you like it.</p>
 
 
-<a href="https://3sforthrees.github.io/3sforThrees/for%20you.html">
+<a href="https://3sforthrees.github.io/3sforThrees/part%202.html">
        <button>
        Click me 
        </button>
@@ -27,3 +27,4 @@
 
 
 </html>
+
