--- a/part 2.html
+++ b/part 2.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <title> bulagaaa</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bungee+Shade&family=Bungee+Tint&family=Coiny&family=Concert+One&family=DynaPuff:wght@400..700&family=Festive&family=Italianno&family=Knewave&family=Loved+by+the+King&family=Monoton&family=Rubik+Doodle+Shadow&family=Rubik+Puddles&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
@@ -42,6 +43,7 @@ p{
 }
  .surprise{ font-size: 60px;
   animation:alternate bounce 0.5s infinite;
+  margin-top: 250px;
 }
 @keyframes bounce {
   0% { transform: translateY(0);}
@@ -63,7 +65,6 @@ class="no-rectangle">
 
 
 </body>
-
 
 
 
