--- a/lara page.html
+++ b/lara page.html
@@ -10,7 +10,7 @@ body {
 .her{
     height: 700px;
      background-repeat:no-repeat;
-background-image: url(file:///C:/Users/ernes/Downloads/df552711-87f1-43f2-b77c-7add06a9b6fc.jpg);
+background-image: url(https://i.ibb.co/h1xPSzKX/df552711-87f1-43f2-b77c-7add06a9b6fc.jpg);
 background-size: 90%;
 background-position:center;
     width:1500px;
@@ -63,4 +63,5 @@ cursor: pointer;}
 
 
 </html>
+
 
