--- a/for you.html
+++ b/for you.html
@@ -75,7 +75,7 @@ cheers for the year that God blessed you with.
 </button>
 </a>
 
-<a href="">
+<a href="https://3sforthrees.github.io/3sforThrees/favorites.html">
 <button class="favorites">
     Your favorites
 </button>
@@ -133,3 +133,4 @@ Poem <br> :)
 
 
 </html>
+
