--- a/favorites.html
+++ b/favorites.html
@@ -231,11 +231,12 @@ background-color:rgb(171, 45, 45);}
     <button class="fg"> Friendgroup</button>
     </a>
      <br>
-       <a href="" class="no-rectangle">
+       <a href="https://3sforthrees.github.io/3sforThrees/for%20you.html" class="no-rectangle">
     <button class="back">  Go back to <br> main page </button>
     </a>
 
 </body>
+
 
 
 </html>
