--- a/for you.html
+++ b/for you.html
@@ -86,9 +86,11 @@ cheers for the year that God blessed you with.
     Click for<br> a surprise
 </button>
 </a>
+    <a href="https://3sforthrees.github.io/3sforThrees/poem.html">
 <button class="Poem">
 Poem <br> :)
 </button>
+    </a>
 
 
 
@@ -133,4 +135,5 @@ Poem <br> :)
 
 
 </html>
+
 
