--- a/letter.html
+++ b/letter.html
@@ -76,7 +76,7 @@ cursor: pointer;}
 <p class="p2">
     - 3sforThrees :)
 </p>
-<a href="" class="no-rectangle">
+<a href="https://3sforthrees.github.io/3sforThrees/for%20you.html" class="no-rectangle">
 <button>Go back to <br> main page</button>
 </a>
 
@@ -91,6 +91,7 @@ cursor: pointer;}
 
    
  
+
 
 
 
